bk_ida/gobmkida/c1/make_worms
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/make_worms/src/engine/worm.c:823:26: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)( byte_9AA88C[v29] - 1) <= 1u 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/make_worms/src/engine/worm.c:844:26: error: use of undeclared identifier 'byte_9AA89F'
if ( ( unsigned __int8)( byte_9AA89F[v32] - 1) <= 1u 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/make_worms/src/obj/1/worm.o] Error 1
